--- a/package.json
+++ b/package.json
@@ -9,10 +9,14 @@
     "dev:debug": "nodemon --inspect src/server.js"
   },
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "pg": "^8.2.1",
+    "pg-hstore": "^2.3.3",
+    "sequelize": "^5.21.10"
   },
   "devDependencies": {
     "nodemon": "^2.0.4",
+    "sequelize-cli": "^5.5.1",
     "sucrase": "^3.14.0"
   }
 }
