--- a/package.json
+++ b/package.json
@@ -15,7 +15,15 @@
     "sequelize": "^5.21.10"
   },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^3.0.0",
+    "@typescript-eslint/parser": "^3.0.0",
+    "eslint": "^6.8.0",
+    "eslint-config-airbnb-base": "^14.1.0",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-plugin-import": "^2.20.2",
+    "eslint-plugin-prettier": "^3.1.3",
     "nodemon": "^2.0.4",
+    "prettier": "^2.0.5",
     "sequelize-cli": "^5.5.1",
     "sucrase": "^3.14.0"
   }
